# DrawTool-software

DrawTools/: CMakeLists.txt  arrowitem.cpp  arrowitem.h  commands.h  diagramrectitem.cpp  diagramrectitem.h  diagramscene.cpp  diagramscene.h  diagramview.cpp  diagramview.h  filemanager.cpp  filemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  propertiespanel.cpp  propertiespanel.h  resizableequationitem.cpp  resizableequationitem.h  resizablepixmapitem.cpp  resizablepixmapitem.h  symbollibrary.cpp  symbollibrary.h
